[package]
name = "woddle"
description = "An async, synchronized, database-backed Rust job scheduler"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/woddle"
repository = "https://github.com/zupzup/woddle"
categories = ["date-and-time", "asynchronous", "web-programming"]
keywords = ["woddle", "job", "cron", "quartz"]

[dependencies]
chrono = { version = "0.4" }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
async-trait = "0.1"
log = "0.4"
cron = "0.6"
tokio = { version = "0.2", features = ["time"], optional = true }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"], optional = true }
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"], optional = true }
mobc = { version= "0.5", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
mobc = { version= "0.5" }

[features]
default = ["tokio", "tokio-postgres"]
pool-mobc = ["tokio", "mobc", "mobc-postgres"]

[[test]]
name = "pooled"
required-features = ["pool-mobc"]

[[example]]
name = "pooled"
required-features = ["pool-mobc"]
