[package]
name = "woddle"
description = "An async, synchronized, database-backed Rust job scheduler"
version = "0.4.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/woddle"
repository = "https://github.com/zupzup/woddle"
categories = ["date-and-time", "asynchronous", "web-programming"]
keywords = ["woddle", "job", "cron", "quartz"]

[dependencies]
chrono = { version = "0.4" }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
async-trait = "0.1"
log = "0.4"
cron = "0.12"
tokio = { version = "1.1", features = ["time", "rt-multi-thread"], optional = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
mobc-postgres = { version = "0.8", features = ["with-chrono-0_4"], optional = true }
mobc = { version= "0.8", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
mobc-postgres = { version = "0.8", features = ["with-chrono-0_4"] }
mobc = { version= "0.8" }

[features]
default = ["tokio", "tokio-postgres"]
pool-mobc = ["tokio", "mobc", "mobc-postgres"]

[[test]]
name = "pooled"
required-features = ["pool-mobc"]

[[example]]
name = "pooled"
required-features = ["pool-mobc"]
